--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -6,29 +6,38 @@
 
   <ion-content class="padding">
 
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+    <ion-list>
+      <div class="item item-input " style="height: 10%" ng-click="">
+        <input type="text" ng-keyup="pesquisar(search)" ng-blur="limpaAuto()" ng-model="search" class="form-control input-lg"
+               placeholder="O que voce procura?" autofocus autocomplete="off">
+        <i ng-click="" class="button button-clear icon ion-search padding-right"></i>
       </div>
+    </ion-list>
+
+    <div class="autocomplete" ng-show="completing">
+      <ul>
+        <li ng-repeat="dica in dicas">
+          <a class="link" >
+            {{dica}}
+          </a>
+        </li>
+      </ul>
     </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
+
+    <div style="margin-top: 10px">
+    <ion-list>
+      <ion-item class="item-remove-animate item-avatar item-icon-right"
+                ng-repeat="instituicao in instituicoes" type="item-text-wrap" ng-click="">
+        <img ng-src="http://sisdo-web{{instituicao.picture}}">
+        <h2>{{instituicao.fancyName}}</h2>
+        <p>{{instituicao.branch}}</p>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+        <a href="#/instituicao/{{instituicao.id}}">Ver mais</a>
+        <ion-option-button class="button-assertive" ng-click="remove(chat)">
+          Delete
+        </ion-option-button>
+      </ion-item>
+    </ion-list>
     </div>
   </ion-content>
 </ion-view>
