Implementado Lista de instituicoes, Login com persistencia do usuario logado, Lista de transacoes, lista de doacoes da instituicao, inicio de transacao.

--- a/www/templates/donativos.html
+++ b/www/templates/donativos.html
@@ -1,11 +1,11 @@
 
-<ion-view view-title="Donativos" class="text-center" name="donativos">
+<ion-view view-title="Campanhas" class="text-center" name="donativos">
     <ion-content class="padding">
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right"
                       ng-repeat="donativo in donativos" type="item-text-wrap" ng-click="go('/donativo/'+ donativo.idProduto)">
                 <h2>{{donativo.title}}</h2>
-                <p>{{donativo.metodo}}</p>
+                <p>{{donativo.productType}}</p>
                 <i class="icon ion-chevron-right icon-accessory"></i>
             </ion-item>
         </ion-list>
