--- a/www/templates/instituicao.html
+++ b/www/templates/instituicao.html
@@ -14,7 +14,8 @@
                 <p>{{instituicao.email}}</p>
 
             </ion-item>
-            <a class="button button-full button-balanced" ng-click="go('/donativos/'+instituicao.id)" >Ver Donativos</a>
+            <p class="item item-assertive" ng-show="!instituicao.hasDonativos"><b>Instituicao nao possui Campanha</b></p>
+            <a class="button button-full button-balanced" ng-show="instituicao.hasDonativos" ng-click="go('/donativos/'+instituicao.id)" >Ver Donativos</a>
             <a class="button button-full button-energized">Doacao Financeira</a>
         </ion-list>
 
