Aplicado visualização de minhas transacoes e loading no carregamento ajax.

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -6,7 +6,7 @@
   <ion-content>
     <ion-list>
     <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
+        Configuracoes
     </ion-toggle>
     </ion-list>
   </ion-content>
