--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,8 +12,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="Doacoes" icon-off="ion-ios-checkmark" icon-on="ion-ios-checkmark" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Minhas Doacoes" icon-off="ion-ios-checkmark" icon-on="ion-ios-checkmark" href="#/tab/minhastransacoes">
+    <ion-nav-view name="tab-minhas-transacoes"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
