--- a/www/templates/transacao.html
+++ b/www/templates/transacao.html
@@ -5,7 +5,7 @@
             <b>{{transacao.institutionUser}}</b>
         </label>
         <label class="item">
-            Produto : {{transacao.product}}
+            Campanha : {{transacao.product}}
         </label>
         <label class="item">
             Quantidade Doada : {{transacao.quantify}}
