--- a/www/templates/donativos.html
+++ b/www/templates/donativos.html
@@ -1,5 +1,7 @@
-
 <ion-view view-title="Campanhas" class="text-center" name="donativos">
+    <ion-nav-buttons side="left">
+        <button class="button button-icon button-clear ion-navicon" ng-click="openMenu()"></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right"
