--- a/www/templates/instituicao.html
+++ b/www/templates/instituicao.html
@@ -1,5 +1,8 @@
 
 <ion-view view-title="Instituicao" class="text-center" name="instituicao">
+    <ion-nav-buttons side="left">
+        <button class="button button-icon button-clear ion-navicon" ng-click="openMenu()"></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
 
         <div class="text-center">
