--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,17 +2,12 @@
   <ion-content class="padding">
     <div class="list list-inset">
       <label class="item item-input">
-        <input type="text" placeholder="Username" ng-model="data.username">
+        <input type="text" placeholder="Email" ng-model="data.username">
       </label>
       <label class="item item-input">
-        <input type="password" placeholder="Password" ng-model="data.password">
+        <input type="password" placeholder="Senha" ng-model="data.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="login()">Login</button>
-
-   <!-- <div ng-controller="MainCtrl">
-      The weather outside is {{conditions}}
-    </div> -->
-
+    <button class="button button-block button-positive" ng-click="login()">Entrar</button>
   </ion-content>
 </ion-view>
